src/objects/CPQ_TS_Price_List_Selection__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings to populate price list on Proposal record based on Account Country and Proposal record type</description>
    <fields>
        <fullName>Account_Country__c</fullName>
        <description>Should contain short form of Account country like JP</description>
        <inlineHelpText>Should contain short form of Account country like JP</inlineHelpText>
        <label>Account Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_List_Name__c</fullName>
        <description>Should be the name of CPQ Price List</description>
        <inlineHelpText>Should be the name of CPQ Price List</inlineHelpText>
        <label>Price List Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Record_Type_Name__c</fullName>
        <description>Should be the Developer name of Proposal record type</description>
        <inlineHelpText>Should be the Developer name of Proposal record type</inlineHelpText>
        <label>Proposal Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CPQ TS Price List Selection</label>
</CustomObject>